# $Id$

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-03-03  Michael Jahn
	* Cinematografo movie plugin updated

2009-02-28  Michael Jahn
	* screenplay, cameraman, resolution and barcode added to Search-For section in preferences

2009-02-24  Michael Jahn
	* Amazon posters: removing of temporary files fixed

2009-02-12  Piotr Ożarowski
	* Add new default tag: "Buy me"

2009-02-11  Piotr Ożarowski
	* Version changed to 0.10-beta3~svn
	* Backup function fixed
	* PostgreSQL/MySQL backup support added

---- 0.10-beta2 ----

2009-02-10  Piotr Ożarowski
	* Fix upgrading from v2 to v4 (columns that are not available yet, are not used)
	* Releasing 0.10-beta2

2009-02-07  Michael Jahn
	* CineMovies movie plugin updated

2009-02-05  Michael Jahn
	* AniDB movie plugin updated

2009-02-01  Piotr Ożarowski
	* Add interactive shell (--shell commandline option)
	* Add barcode column to the movie table
	* Add resolution (width and height columns) to the movie table
	* Change default type of runtime and year to SmallInteger

2009-01-31  Michael Jahn
	* Allocine movie plugin updated
	* small unicode fixes for 7arte movie plugin

2009-01-28  Michael Jahn
	* FilmAffinity movie plugin updated

2009-01-24  Michael Jahn
	* DVD-Palace movie plugin updated

2009-01-22  Michael Jahn
	* fixed Greek translation of the word "Danish" (thanks to Johnny)

2009-01-18  Piotr Ożarowski
	* Upgrading from 0.6.2 partially fixed (posters are missing)
	* Add loaned_movies_count and returned_movies_count properties to Person

2009-01-17  Piotr Ożarowski
	* Use MediumBLOB on MySQL to store posters. Database has to be recreated if 0.10-beta1 was used to create it.
	* Few SQL optimizations

2009-01-16  Piotr Ożarowski
	* Print move details during startup in debug mode

2009-01-16  Michael Jahn
	* [#317837] 007 james bond (PDF export grouping error)

2009-01-15  Michael Jahn
	* Amazon movie plugin updated
	* better results for amazon poster search