@@ -5,6 +5,10 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-03-10  Michael Jahn
+	* [#337758] 'Titel' and 'Original Titel' get the same content
+	  (IMDb-de plugin updated)
+
 2009-03-03  Michael Jahn
 	* Cinematografo movie plugin updated
 
